extracted additional instances of stage dir

--- a/playbooks/regen-install-config.yaml
+++ b/playbooks/regen-install-config.yaml
@@ -11,10 +11,10 @@
     - name: regen install-config 
       copy:
         src:  /home/ayoung/ocp-ansible/files/install-config.yaml.orig
-        dest: /home/ayoung/ocp-ansible/stage/install-config.yaml
+        dest: "{{ stage_dir }}/install-config.yaml"
 
     - name: validate install-config
-      command: /home/ayoung/apps/ocp4.4/openshift-install create install-config  --dir /home/ayoung/ocp-ansible/stage
+      command: /home/ayoung/apps/ocp4.4/openshift-install create install-config  --dir "{{ stage_dir }}"
       environment:
         OS_CLOUD: fsi-moc
 
