--- a/playbooks/regen-install-config.yaml
+++ b/playbooks/regen-install-config.yaml
@@ -22,10 +22,20 @@
     - name: adjust install config
       command: "{{ base_dir }}/bin/adjust_install_config.py"
       args:
-        chdir:  "{{ base_dir }}/stage"
+        chdir:  "{{ stage_dir }}"
 
     - name: create manifests
       command: "{{ installer }} create manifests"
       environment:
          OS_CLOUD: fsi-moc
 
+
+    - name: remove machines and machinesets
+      file:
+        path: "{{ stage_dir }}/openshift/{{ item }}"
+        state: absent
+      with_items:
+        -  99_openshift-cluster-api_master-machines-0.yaml
+        -  99_openshift-cluster-api_master-machines-1.yaml
+        -  99_openshift-cluster-api_master-machines-2.yaml
+        -  99_openshift-cluster-api_worker-machineset-0.yaml
