--- a/playbooks/regen-install-config.yaml
+++ b/playbooks/regen-install-config.yaml
@@ -39,3 +39,8 @@
         -  99_openshift-cluster-api_master-machines-1.yaml
         -  99_openshift-cluster-api_master-machines-2.yaml
         -  99_openshift-cluster-api_worker-machineset-0.yaml
+
+    - name: control-plane nodes unschedulable
+      command: "{{ base_dir }}/bin/unschedulable_control.py"
+      args:
+        chdir:  "{{ stage_dir }}"
