correct INFRA_ID register and usage

--- a/playbooks/regen-install-config.yaml
+++ b/playbooks/regen-install-config.yaml
@@ -61,5 +61,5 @@
       args:
         chdir:  "{{ stage_dir }}"
       environment:
-        INFRA_IDS: "{{ INFRA_ID }}"
+        INFRA_ID: "{{ INFRA_ID.stdout }}"
 
