move the supporting binaries to exec

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ stage/
 */.openshift_install_state.json
 */.openshift_install.log
 files/install-config.orig
-bin/README.md
-bin/openshift-install
+exec/README.md
+exec/openshift-install
+
